examples/error-codes/undefined/UB-CEE5-bad-static.output
UB-CEE5-bad-static.c:4:7: error: Trying to convert an incomplete lvalue not of array type.
  Undefined behavior (UB-CEE5). See C11 sec. 6.3.2.1:2, J.2:1 item 20
<unknown>: error: No definition for symbol with external linkage: x.
  Undefined behavior (UB-TDR2). See C11 sec. 6.9:5, J.2:1 item 84
