examples/error-codes/undefined/UB-CEE5-bad-static.c
extern struct foo x;

int main() {
      x;
}
